Change files format

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 					</li>
 					<li><a href="#"><span class="fa fa-asl-interpreting"></span>Shiraz Medical Capacities</a>
 						<ul>
-							<li><a href="Shiraz Medical Capacities/introduce-shiraz.php">Introduction to Shiraz</a>
+							<li><a href="Shiraz Medical Capacities/introduce-shiraz.html">Introduction to Shiraz</a>
 							</li>
-							<li><a href="Shiraz Medical Capacities/fars-attractions.php">Fars Tourist Attractions</a>
+							<li><a href="Shiraz Medical Capacities/fars-attractions.html">Fars Tourist Attractions</a>
 							</li>
-							<li><a href="Shiraz Medical Capacities/Hospital/Hospitals.php">Hospitals</a>
+							<li><a href="Shiraz Medical Capacities/Hospital/Hospitals.html">Hospitals</a>
 							</li>
-							<li><a href="Shiraz Medical Capacities/Hospital/Health-Centers.php">Health Centers</a>
+							<li><a href="Shiraz Medical Capacities/Hospital/Health-Centers.html">Health Centers</a>
 							</li>
 							<li><a href="#">Professional Beauty Clinics</a>
 							</li>
@@ -84,15 +84,15 @@
 					</li>
 					<li><a href="#"><span class="fa fa-heartbeat"></span>Medical Centers</a>
 						<ul>
-							<li><a href="Medical Centers/Eye treatment/eye-treatment.php">Eye treatment</a>
+							<li><a href="Medical Centers/Eye treatment/eye-treatment.html">Eye treatment</a>
 							</li>
 							<li><a href="#">Orthopedic</a>
 							</li>
-							<li><a href="Medical Centers/Hearth Treatment/hearth-treatment.php">Heart treatment</a>
+							<li><a href="Medical Centers/Hearth Treatment/hearth-treatment.html">Heart treatment</a>
 							</li>
 							<li><a href="#">ِDentistry</a>
 							</li>
-							<li><a href="Medical Centers/Obstetrics and Gynecology/Obstetrics-Gynecology.php">Obstetrics and Gynecology</a>
+							<li><a href="Medical Centers/Obstetrics and Gynecology/Obstetrics-Gynecology.html">Obstetrics and Gynecology</a>
 							</li>
 							<li><a href="#">Introducing Physicians</a>
 							</li>
@@ -100,7 +100,7 @@
 					</li>
 					<li><a href="#"><span class="fa fa-heart-o"></span>Beauty_Hair _Skin Services</a>
 						<ul>
-							<li><a href="Beauty_Hair _Skin Services/Beauty-Hair-Skin Clinic/Beauty-Hair-Skin.php">Beauty-Hair-Skin Clinic</a>
+							<li><a href="Beauty_Hair _Skin Services/Beauty-Hair-Skin Clinic/Beauty-Hair-Skin.html">Beauty-Hair-Skin Clinic</a>
 							</li>
 							<li><a href="#">Planting Personnel</a>
 							</li>
